# qcpy

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE.txt  README.md  __init__.py  requirements.txt  setup.py
.git_backup/: FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.git_backup/logs/: HEAD
.git_backup/objects/pack/: pack-ad3fc99ffd4c83fdca01dce1d0f9069d33204748.idx
.git_backup/refs/heads/: help  main
.github/workflows/: unit-test.yml
examples/: show_quantum_circuit_drawing.py  use_custon_quantum_gates.py
src/: __init__.py  generate.make
src/circuit_drawing/: circuit_drawing.py
src/connect/: __init__.py  boot.py  connect.py  port_entry.py  qcpy_args.py
src/core/: CMakeLists.txt  conanfile.txt  main.c  qcpy_connect.c  qcpy_core.c
src/core/.cache/clangd/index/: args.c.ED84A060AC279D11.idx  args.c.F4BB12542116D318.idx  args.h.297C9A6D7661A90A.idx  args.h.B916C94324155F8E.idx  base.c.6AEA300545E76B47.idx  base.c.6D5168533209653A.idx  base.h.09951C294E5409CD.idx  base.h.1C562BD188BD73A0.idx  block.c.76CDAD240A9734FD.idx  block.c.B7E5D815751DB3CD.idx  block.h.7383F16EB836583B.idx  block.h.9208186FD8ACE2D2.idx  boot.c.3091F855A7704B48.idx  boot.c.6BACA2902A925342.idx  boot.h.E83464CAB159421C.idx  boot.h.F898915C05FD2A37.idx  dock.c.3FBDD41574FF4C71.idx  dock.c.D0C0EC7C08B3BEC9.idx  dock.h.1BD50D0FCBEE2E99.idx  dock.h.4191073801ACB8A4.idx  error_importer.c.90CC513D80F49C58.idx  error_importer.c.D687744530EA787B.idx  error_importer.h.78EA8C8873A17523.idx  error_importer.h.CCA6E2DF9DF0193F.idx  exporter.c.7295965FCABA38C4.idx  exporter.c.D17D98DA5341237C.idx  exporter.h.5077628570BB4345.idx  exporter.h.9AE73EDA1B96580F.idx  importer.c.026BB0C8A7BB9D36.idx  importer.c.FB0BCC1CFD0D42FB.idx  importer.h.7299D8EE60B38B7D.idx  importer.h.803A3050CD6C3E53.idx  infra.c.73D1F6F4E55D3DDD.idx  main.c.AA5ACC2B488CD6F2.idx  port.c.0DFF21E15BEEF993.idx  port.c.CDEA51B43C81E655.idx  port.h.85B030BEC1C17287.idx  port.h.995375D3D8C02E48.idx  qcpy_connect.c.6CA0709D2516465B.idx  qcpy_connect.c.8B8434911C27509F.idx  (+90 more)
src/core/base/: CMakeLists.txt  base.c  base.h
src/core/block/: CMakeLists.txt  block.c  block.h
src/core/boot/: CMakeLists.txt  boot.c  boot.h
src/core/boot/args/: CMakeLists.txt  args.c  args.h
src/core/dock/: CMakeLists.txt  dock.c  dock.h
src/core/error/: CMakeLists.txt  qcpy_error.c  qcpy_error.h
src/core/error/critical/error_boot/: CMakeLists.txt
src/core/error/critical/error_exporter/: CMakeLists.txt
src/core/error/critical/error_importer/: CMakeLists.txt  error_importer.c  error_importer.h
src/core/error/replay/replay_qlog/: CMakeLists.txt  replay_qlog.c  replay_qlog.h
src/core/error/replay/replay_qlog_entry/: CMakeLists.txt  replay_qlog_entry.c  replay_qlog_entry.h
src/core/error/replay/replay_qlog_register/: CMakeLists.txt
src/core/port/: CMakeLists.txt  port.c  port.h
src/core/port/exporter/: CMakeLists.txt  exporter.c  exporter.h
src/core/port/importer/: CMakeLists.txt  importer.c  importer.h
src/core/qlog/: CMakeLists.txt  qlog.c  qlog.h
src/core/qlog/circuit_info/: qlog_circuit_info.c  qlog_circuit_info.h
src/core/qlog/entry/: CMakeLists.txt  qlog_entry.c  qlog_entry.h
src/core/qlog/entry/stats/: CMakeLists.txt
src/core/qlog/graph/: CMakeLists.txt  qlog_graph.c  qlog_graph.h
src/core/qlog/graph/node/: CMakeLists.txt  qlog_node.c  qlog_node.h
src/core/qlog/graph/stats/: CMakeLists.txt
src/core/qlog/infra/: CMakeLists.txt  qlog_infra.c  qlog_infra.h
src/core/qlog/infra/qlog_scheduler/: CMakeLists.txt  qlog_scheduler.c  qlog_scheduler.h
src/core/qlog/infra/qlog_thread_pool/: CMakeLists.txt  qlog_thread_pool.c  qlog_thread_pool.h
src/core/qlog/optimize/: CMakeLists.txt  qlog_optimize.c  qlog_optimize.h
src/core/qlog/optimize/clean/: CMakeLists.txt  qlog_clean.c  qlog_clean.h
src/core/qlog/optimize/expand/: CMakeLists.txt  qlog_expand.c  qlog_expand.h
src/core/qlog/optimize/stats/: CMakeLists.txt
src/core/qlog/register/: CMakeLists.txt  qlog_register.c  qlog_register.h
src/core/quack/: CMakeLists.txt
src/core/quack/dense/: CMakeLists.txt
src/core/quack/export/: CMakeLists.txt
src/core/quack/gpu/: CMakeLists.txt
src/core/quack/hive/: CMakeLists.txt
src/core/quack/import/: CMakeLists.txt
src/core/quack/merge/: CMakeLists.txt
src/core/quack/start/: CMakeLists.txt
src/core/quack/tetris/: CMakeLists.txt
src/core/register/: CMakeLists.txt  qlog_register.c  qlog_register.h
src/core/test/: CMakeLists.txt  run_tests.c
src/core/test/test_common/: CMakeLists.txt  test_common.c  test_common.h
src/core/test/test_qlog/: CMakeLists.txt  test_qlog_append.c  test_qlog_init.c
src/global/: global.c  global.h
src/global_types/: global.c  global.h  global_lib.py
src/interface/: __init__.py  generate.make
src/interface/cd/: circuit_drawing.py
src/interface/draw/: q_sphere.py
src/interface/error/: __init__.py
src/interface/port/: port_lib.py
src/interface/qc/: __init__.py  quantum_circuit.py
src/interface/quantum_gate/: quantum_gate.c  quantum_gate.h
src/legacy_junk/global_types/: global.c  global_lib.py
src/legacy_junk/port/: port.h
src/legacy_junk/qlog/: qlog.h  qlog_entry.h  qlog_lib.py  qlog_register.c
src/port/: port.c  port.h
src/quantum_circuit/: quantum_circuit.py
src/quantum_circuit/qlog/: qlog.c  qlog.h  qlog.py  qlog_entry.c  qlog_entry.h  qlog_entry_stats.c  qlog_entry_stats.h  qlog_lib.py  qlog_optimize.c  qlog_optimize.h  qlog_optimize_graph.c  qlog_optimize_graph.h  qlog_optimize_stats.c  qlog_optimize_stats.h  qlog_register.c  qlog_register.h  qlog_stats.c  qlog_stats.h  qlog_trigger_optimize.h
src/quantum_gate/: quantum_gate.c  quantum_gate.h
src/tools/: probability.py
test/quantumcircuit/qlog/: test_qc_qlog_01.py  test_qc_qlog_02.py  test_qc_qlog_03.py  test_qc_qlog_04.py  test_qc_qlog_05.py  test_qc_qlog_06.py
test/quantumcircuit/sparse/: test_qc_sparse_03.py
tutorial/: api_reference.md  deutsch-jozsa.md  gates.md  installation.md  prerequisites.md  readme.md  tutorial.md  usage.md  visualization.md
(+46 files in other folders)
